<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.AddStoryActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/preview_image"
                android:layout_width="157dp"
                android:layout_height="199dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/preview"
                android:scaleType="fitCenter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_add_photo_alternate_24" />

            <Button
                android:id="@+id/button_camera"
                android:layout_width="130dp"
                android:layout_height="50dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="15dp"
                android:text="@string/camera"
                app:cornerRadius="15dp"
                app:layout_constraintEnd_toStartOf="@+id/button_gallery"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/preview_image" />

            <Button
                android:id="@+id/button_gallery"
                android:layout_width="130dp"
                android:layout_height="50dp"
                android:layout_marginEnd="40dp"
                android:layout_marginTop="15dp"
                android:text="@string/gallery"
                app:cornerRadius="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/button_camera"
                app:layout_constraintTop_toBottomOf="@+id/preview_image" />

            <TextView
                android:id="@+id/tv_desc"
                android:layout_width="117dp"
                android:layout_height="25dp"
                android:layout_marginTop="4dp"
                android:text="@string/description"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/ed_add_description"
                app:layout_constraintTop_toBottomOf="@+id/button_camera" />

            <EditText
                android:id="@+id/ed_add_description"
                android:layout_width="327dp"
                android:layout_height="170dp"
                android:layout_marginTop="5dp"
                android:hint="@string/description"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                app:layout_constraintEnd_toEndOf="@+id/button_gallery"
                app:layout_constraintStart_toStartOf="@+id/button_camera"
                app:layout_constraintTop_toBottomOf="@+id/tv_desc" />

            <Button
                android:id="@+id/button_add"
                android:layout_width="263dp"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="8dp"
                android:text="@string/upload"
                app:cornerRadius="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ed_add_description" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/progress_bar"
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:layout_centerHorizontal="true"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.711"
                app:lottie_autoPlay="true"
                app:lottie_fileName="144805-loading.json"
                app:lottie_loop="true" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>